<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>

    <string name="usernamePlaceholder">"@"username</string>
    <string name="passwordPlaceholder">password</string>
    <string name="loginButtonLabel">Log In</string>

    <string name="firstNamePlaceholder">first name</string>
    <string name="lastNamePlaceholder">last name</string>
    <string name="takeProfilePictureButton">Take Profile Picture</string>
    <string name="registerButtonLabel">Register</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="postPrompt">What is on your mind?</string>
    <string name="post">Post</string>
    <string name="sampleUserName">The User</string>
    <string name="sampleTimePublished">Sep 15 2020 10:49PM</string>
    <string name="sampleTweet">Hello, World! How are you?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="followButtonLabel">Follow</string>
    <string name="unfollowButtonLabel">Unfollow</string>
</resources>
