<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.login.RegisterFragment">

    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstNamePlaceholder"
        android:inputType="text"
        android:autofillHints="first name" />

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/lastNamePlaceholder"
        android:autofillHints="last name" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernamePlaceholder"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordPlaceholder"
        android:autofillHints="password" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/takeProfilePicture"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/takeProfilePictureButton"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonLabel" />

</LinearLayout>