<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.login.LoginFragment">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernamePlaceholder"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/passwordPlaceholder"
        android:autofillHints="password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButtonLabel" />

</LinearLayout>