<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.user.UserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/userImageContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/userImage"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homePageTitle"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homePageTitle"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/followeeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followeeCount"
                        android:paddingHorizontal="5sp"/>

                    <Space
                        android:layout_width="5sp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/followerCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followerCount"
                        android:paddingHorizontal="5sp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <ToggleButton android:layout_height="match_parent"
            android:id="@+id/followButton"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:textOff="@string/followButtonLabel"
            android:textOn="@string/unfollowButtonLabel"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>