<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    tools:context=".view.main.post.PostFragment">


    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName" />

        <TextView
            android:id="@+id/userAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userName"
            android:textSize="16sp"
            tools:text="@string/sampleAlias" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="close_icon"
        android:src="@drawable/close_icon" />

    <EditText
        android:id="@+id/statusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/postPrompt"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/userImage"
        android:inputType="text"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusText"
        android:layout_margin="10dp"
        tools:text="@string/post"/>


</RelativeLayout>